<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerProv"
    android:background="@drawable/background_login">

    <TextView
        android:id="@+id/titleRegp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/REGR_reg"
        android:textColor="@color/white"
        android:textSize="22pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="500dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRegp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/regp_title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:text="@string/REGR_name_t"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <EditText
                android:id="@+id/regp_input_name"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginStart="55dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/REGR_name_c"
                android:inputType="text"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/regp_title_lname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:text="@string/REGR_lname_t"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <EditText
                android:id="@+id/regp_input_lname"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginStart="55dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/REGR_lname_c"
                android:inputType="text"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/regp_title_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:text="@string/REGR_email_t"
                android:textColor="@color/white"
                android:textSize="10pt"/>

            <EditText
                android:id="@+id/regp_input_email"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginStart="55dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/REGR_email_c"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/regp_title_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:text="@string/REGR_phone_t"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <EditText
                android:id="@+id/regp_input_phone"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@color/white"
                android:layout_marginStart="55dp"
                android:ems="10"
                android:hint="@string/REGR_phone_c"
                android:inputType="text|phone"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/regp_title_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:text="@string/REGR_address_t"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <EditText
                android:id="@+id/regp_input_address"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@color/white"
                android:layout_marginStart="55dp"
                android:ems="10"
                android:hint="@string/REGR_address_c"
                android:inputType="textPostalAddress"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/regp_title_passwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:text="@string/REGR_passwd_t"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <EditText
                android:id="@+id/regp_input_passwd"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@color/white"
                android:ems="10"
                android:layout_marginStart="55dp"
                android:hint="@string/REGR_passwd_c"
                android:inputType="textPassword"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/regp_title_cpasswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:text="@string/REGR_cpasswd_t"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <EditText
                android:id="@+id/regp_input_cpasswd"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@color/white"
                android:ems="10"
                android:layout_marginStart="55dp"
                android:hint="@string/REGR_passwd_c"
                android:inputType="textPassword"
                android:paddingLeft="10dp" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/regpButton"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@color/GreenMain"
        android:gravity="center"
        android:text="@string/REGR_button"
        android:textColor="@color/white"
        android:textSize="8pt"
        android:onClick="registerUserProv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />


</androidx.constraintlayout.widget.ConstraintLayout>