<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".registerRec">


    <TextView
        android:id="@+id/titleRegr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/REGR_reg"
        android:textColor="@color/white"
        android:textSize="22pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp">

        </LinearLayout>


    <Button
        android:id="@+id/regrButton"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@color/GreenMain"
        android:gravity="center"
        android:onClick="registerUserRec"
        android:text="@string/REGR_button"
        android:textColor="@color/white"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regr_input_cpasswd" />

    <EditText
        android:id="@+id/regr_input_cpasswd"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/REGR_passwd_c"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regr_input_passwd" />

    <TextView
        android:id="@+id/regr_title_passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/REGR_passwd_t"
        android:textColor="@color/white"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/regr_input_passwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/regr_input_passwd"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/REGR_passwd_c"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regr_input_phone" />

    <TextView
        android:id="@+id/regr_title_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/REGR_phone_t"
        android:textColor="@color/white"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/regr_input_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/regr_input_phone"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/REGR_phone_c"
        android:inputType="text|phone"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regr_input_email" />

    <TextView
        android:id="@+id/regr_title_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/REGR_email_t"
        android:textColor="@color/white"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/regr_input_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/regr_input_email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/REGR_email_c"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regr_input_lname" />

    <TextView
        android:id="@+id/regr_title_lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/REGR_lname_t"
        android:textColor="@color/white"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/regr_input_lname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/regr_input_lname"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/REGR_lname_c"
        android:inputType="text"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regr_input_name" />

    <TextView
        android:id="@+id/regr_title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/REGR_name_t"
        android:textColor="@color/white"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/regr_input_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/regr_input_name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/REGR_name_c"
        android:inputType="text"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRegr" />

    <TextView
        android:id="@+id/regr_title_cpasswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/REGR_cpasswd_t"
        android:textColor="@color/white"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/regr_input_cpasswd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>