<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".selectTypeUser">
    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="300dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="198dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="133dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleSU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/SU_title"
            android:textColor="@color/white"
            android:textSize="22pt" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:onClick="onClickRegisterRec">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="20dp">


                <ImageView
                    android:id="@+id/SU_imageRec"
                    android:layout_width="151dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/user_rec" />

                <TextView
                    android:id="@+id/SU_Rec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SU_res"
                    android:textColor="@color/white"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickRegisterProv"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/SU_imageProv"
                    android:layout_width="123dp"
                    android:layout_height="99dp"
                    app:srcCompat="@drawable/user_prov" />

                <TextView
                    android:id="@+id/SU_Prov"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SU_prov"
                    android:textColor="@color/white"
                    android:textSize="30sp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>